# Euler

./: .gitignore  Euler.cabal  README.md  Untitled Diagram.xml
haskell/bob/: Bob.hs  BobTest.hs
haskell/rna-transcription/: .README.md.html  DNA.hs  DNATest.hs
haskell/word-count/: .README.md.html  WordCount.hs  WordCountTest.hs
src/Kikhteal/: Bob.hs  Problem1.hs
test/Kikhteal/: BobTest.hs  Problem1Spec.hs  QuickCheck.hs
