name:           Euler
version:        0.1
cabal-version:  >=1.8
build-type:     Simple
author:         Sasha

library
  hs-source-dirs:
      src,
      haskell/bob, 
      haskell/rna-transcription,
      haskell/word-count
  build-depends:   
      base >= 4,
      HUnit,
      containers
  ghc-options:     -Wall
  exposed-modules: 
      Kikhteal.Problem1
  other-modules:
      Bob,
      BobTest,
      DNA,
      DNATest,
      WordCount,
      WordCountTest

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      Euler,
      hspec   >= 1.7.2.1,
      base    == 4.*,
      QuickCheck,
      HUnit